# paper-chaser-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  .typos.toml  Dockerfile  README.md  SECURITY.md  compose.inspector.yaml  docker-compose.yaml  extract_guided.py  map_symbols.py  mcp-tools.core.json  mcp-tools.full.json  microsoft-plugin.sample.json  ps-rule.yaml  pyproject.toml  server.json  symbol_map.txt
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: mcp-stress-tester.agent.md
.github/aw/: actions-lock.json
.github/workflows/: agentic-assign.yml  dependency-review.yml  deploy-azure.yml  eval-curation-batch.yml  publish-github-release.yml  publish-mcp-registry.yml  publish-public-mcp-package.yml  publish-pypi.yml  publish.yml  test-paper-chaser.lock.yml  test-paper-chaser.md  test-scholar-search.lock.yml  test-scholar-search.md  validate.yml
docs/: agent-handoff.md  azure-architecture.md  azure-deployment.md  azure-security-model.md  cross-domain-remediation-plan.md  environmental-science-remediation-plan.md  fastmcp-migration-plan.md  golden-paths.md  guided-reset-migration-note.md  guided-smart-robustness.md  llm-evaluation-dataset-schema.md  llm-evaluation-integrations.md  llm-evaluation-platform-strategy.md  llm-evaluation-program-plan.md  llm-evaluation-trace-promotion.md  llm-selection-guide.md  openalex-api-guide.md  openrouter-api-guide.md  provider-upgrade-program.md  release-publishing-plan.md  scholarapi-api-guide.md  search-session-export-design.md  semantic-scholar-api-guide.md  serpapi-google-scholar-api-guide.md  stress-test-remediation-plan.md  stress-test-remediation-tracker.md  ux-remediation-checklist.md
docs/pr-prep/: README.md  behavior-and-tests.diff  changed-files.txt  commit-list.txt  diff-stat.txt  docs-and-packaging.diff  full.diff  pr-body.md  pr-description-draft.md  public-contract-and-runtime.diff
infra/: main.bicep  main.dev.bicepparam  main.prod.bicepparam  main.staging.bicepparam
infra/modules/: acr.bicep  apim.bicep  appinsights.bicep  containerApp.bicep  containerAppsEnv.bicep  keyvault.bicep  loganalytics.bicep  managedIdentity.bicep  network.bicep  roleAssignments.bicep
infra/policies/: paper-chaser-policy.xml
paper_chaser_mcp/: __init__.py  citation_repair.py  cli.py  constants.py  deployment_runner.py  deployment_utils.py  dispatch.py  enrichment.py  eval_canary.py  eval_curation.py  eval_exports.py  eval_publish.py  eval_trace_promotion.py  guided_semantic.py  identifiers.py  parsing.py  provider_runtime.py  runtime.py  search.py  search_executor.py  server.py  settings.py  tool_schema.py  tools.py  transport.py
paper_chaser_mcp/agentic/: __init__.py  answer_modes.py  config.py  graphs.py  models.py  planner.py  provider_base.py  provider_helpers.py  provider_langchain.py  provider_openai.py  providers.py  ranking.py  relevance_fallback.py  retrieval.py  selection_scoring.py  subject_grounding.py  workspace.py
paper_chaser_mcp/citation_repair/: __init__.py  _core.py  api.py  candidates.py  normalization.py  ranking.py
paper_chaser_mcp/clients/: __init__.py
paper_chaser_mcp/dispatch/: __init__.py  _core.py  context.py  normalization.py  paging.py  relevance.py  runtime.py  scholarapi.py  snippet_fallback.py
paper_chaser_mcp/eval_canary/: __init__.py  schema.py  validators.py  workflow.py
paper_chaser_mcp/eval_curation/: __init__.py  capture.py  promotion.py  review_queue.py  rubric.py
paper_chaser_mcp/models/: __init__.py  common.py  regulations.py  tools.py
paper_chaser_mcp/renderers/: __init__.py
paper_chaser_mcp/server/: __init__.py  instructions.py  prompts.py  registration.py  resources.py
paper_chaser_mcp/tool_specs/: __init__.py  descriptions.py
paper_chaser_mcp/utils/: __init__.py  cursor.py
scholar_search_mcp/: __init__.py  __main__.py  citation_repair.py  cli.py  compat.py  constants.py  deployment.py  deployment_runner.py  dispatch.py  document_markdown.py  ecos_markdown.py  enrichment.py  parsing.py  provider_runtime.py  runtime.py  search.py  search_executor.py  server.py  settings.py  tool_schema.py  tools.py  transport.py
scholar_search_mcp/agentic/: __init__.py  config.py  graphs.py  models.py  planner.py  providers.py  ranking.py  retrieval.py  workspace.py
scholar_search_mcp/clients/: __init__.py  arxiv.py  (+2 more)
scripts/: build_eval_review_queue.py  export_eval_assets.py  generate_eval_topics.py  live_probe_mcp.py  mcp-launcher.py  promote_eval_traces.py  review_eval_traces.py  run_eval_autopilot.py  run_eval_canaries.py  run_eval_workflow.py  run_expert_eval_batch.py  run_hadolint.py  run_in_repo_venv.py  run_mypy_precommit.py  run_scholarapi_burnin.py  upload_foundry_eval_dataset.py  upload_hf_eval_assets.py  validate_deployment.py  validate_psrule_azure.py  view_eval_matrix.py  view_generated_topics.py
tests/: helpers.py  test_aclassify_answer_mode.py  test_agentic_import_graph.py  test_agentic_provider_schemas.py  test_agentic_providers_extra.py  test_agentic_workflow.py  test_answer_validation.py  test_arxiv_client.py  test_ask_result_set_llm_mode_gate.py  test_bumpver_contract.py  test_citation_repair.py  test_citation_repair_characterization.py  test_citation_repair_fixes.py  test_citation_repair_identity.py  test_citation_repair_ranking.py  test_citation_repair_ranking_bias.py  test_classification_rationale.py  test_cli_entrypoints.py  test_compat_helpers.py  test_core_client.py  test_cross_domain_slices.py  test_crossref_client.py  test_degradation_integration.py  test_deployment.py  test_dispatch.py  test_dispatch_characterization.py  test_dispatch_context.py  test_dispatch_context_threading.py  test_dispatch_contract_compat.py  test_dispatch_expert_openalex.py  test_dispatch_expert_regulatory.py  test_dispatch_facade_allowlist.py  test_dispatch_guided_citations.py  test_dispatch_guided_findings.py  test_dispatch_guided_follow_up.py  test_dispatch_guided_inspect_source.py  test_dispatch_guided_research.py  test_dispatch_guided_resolve_reference.py  test_dispatch_guided_response.py  test_dispatch_guided_sessions.py  (+117 more)
(+162 files in other folders)
