[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-search-mcp"
version = "0.1.2"
description = "Model Context Protocol server for academic paper search across Semantic Scholar, CORE, arXiv, OpenAlex, SerpApi Google Scholar, Crossref, Unpaywall, ECOS species dossiers, and Federal Register / CFR regulatory text"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "semantic-scholar", "core", "arxiv", "openalex", "academic", "papers", "research", "federal-register", "ecos", "regulatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anyio>=4.0.0",
    "defusedxml>=0.7.1",
    "fastmcp>=3.1.0",
    "mcp>=1.24.0",
    "httpx>=0.25.0",
    "markitdown[pdf]>=0.1.5",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
ai = [
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langgraph-checkpoint>=4.0.1",
    "openai>=1.109.0",
    "numpy>=2.2.6,<2.4.0; python_version < '3.11'",
    "numpy>=2.4.3; python_version >= '3.11'",
]
ai-faiss = [
    "faiss-cpu>=1.13.2",
    "langchain-community>=0.4.1",
]
dev = [
    "bandit>=1.8.0",
    "build>=1.4.0",
    "mypy>=1.17.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
    "types-defusedxml>=0.7.0",
]

[project.scripts]
scholar-search-mcp = "scholar_search_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/joshuasundance-swca/scholar-search-mcp"
Repository = "https://github.com/joshuasundance-swca/scholar-search-mcp"
Issues = "https://github.com/joshuasundance-swca/scholar-search-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scholar_search_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-config --strict-markers"
xfail_strict = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.mypy]
python_version = "3.10"
files = ["scholar_search_mcp", "tests"]
check_untyped_defs = true

# Optional agentic extras (ai, ai-faiss) are not installed in CI base runs.
# These imports are guarded at runtime, so silence mypy when stubs are absent.
[[tool.mypy.overrides]]
module = [
    "openai.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langchain_core.*",
    "langgraph.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["scholar_search_mcp"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
